--- a/src/app/play/roulette/roulette.component.html
+++ b/src/app/play/roulette/roulette.component.html
@@ -73,7 +73,7 @@
             </div>
             <!-- Modal body -->
             <div class="modal-body">
-                <h4>Are u sure u wanna try your luck?</h4>
+                <h4>Are you sure you wanna try your luck?</h4>
             </div>
             <!-- Modal footer -->
             <div class="modal-footer">
